# oclbhgs

./: CMakeLists.txt  README.md  main.c
sources/headers/: body.h  cell.h  color.h  com.h  galaxy.h  keys.h  mass.h  ocl.h  ogl.h  position.h
sources/kernel/: _body_apply_accelerations.cl  _body_sort.cl  _cell_clear_idxs.c  _cell_clear_idxs.cl  _cell_set_amount.cl  _cell_set_idxs.cl  _galaxy_clear_inactive_cells.c  _galaxy_clear_inactive_cells.cl  _galaxy_compute_accelerations.c  _galaxy_compute_accelerations.cl  _galaxy_compute_com.c  _galaxy_compute_com.cl  _galaxy_contains_losts.cl  _galaxy_contains_sub_dispatchables.cl  _galaxy_dispatch_losts.cl  _galaxy_dispatch_sub_dispatchables.c  _galaxy_dispatch_sub_dispatchables.cl
sources/kernel_headers/: body.h  cell.h  com.h  galaxy.h  kernel_dev.h  mass.h  ocl.h  position.h
sources/logics/: body.c  cell.c  galaxy.c  ocl.c  ogl.c
